blog conditional finished, about us overflow fixed

--- a/_assets/scss/components/_about-us.scss
+++ b/_assets/scss/components/_about-us.scss
@@ -56,6 +56,8 @@ $aboutUsSmallBoth: $aboutUsSmallTop + $aboutUsSmallBottom;
     position: absolute;
     width: 100%;
     height: 0;
+    z-index: 100;
+    overflow: hidden;
 
 
     &-lower{
