--- a/_assets/scss/components/_blog.scss
+++ b/_assets/scss/components/_blog.scss
@@ -92,3 +92,12 @@
   }
 
 }
+
+.blog-else{
+  margin-top: 33%;
+  padding-bottom: 100%; 
+
+    .reef__bg{
+      transform: scale(-1,-1);
+    }
+}
